[package]
name = "print-positions"
version = "0.1.0"
authors = ["Bob Hyman"]

description = """
A library providing string segmentation on grapheme clusters and ANSI escape sequences
for accurate length arithmetic based on visible print positions.
"""
keywords = ["text", "unicode", "grapheme", "boundary", "ansi", "escape-sequence"]
readme = "README.md"

license = "MIT OR Apache-2.0"
edition = "2021"

#homepage -
#repository =
#documentation


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10.1"
