[package]
name = "print-positions"
version = "0.5.0"
authors = ["Bob Hyman"]

description = """
A library providing string segmentation on grapheme clusters and ANSI escape sequences
for accurate length arithmetic based on visible print positions.
"""
keywords = ["text", "unicode", "grapheme", "ansi", "escape-sequence"]
readme = "README.md"

license = "MIT OR Apache-2.0"
edition = "2021"

repository = "https://github.com/bobhy/print-positions"

#homepage -
#documentation


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
simple-logging = "2.0.2"
unicode-segmentation = "1.10.1"

[dev-dependencies]
anyhow = "1.0.69"
arbitrary = { version = "1.2.3", features = ["derive"] }
